// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPage component renders with cities 1`] = `
<div
  className="list"
>
  <AddCity
    context={
      Object {
        "lists": Array [],
      }
    }
  />
  <div
    className="list-cities"
  >
    <p>
      ⇦ Click a city to view Weather ⇨
    </p>
    <ul>
      <li
        key="0"
      >
        <Item
          city={
            Object {
              "list_id": 1,
              "name": "San Francisco",
            }
          }
          getNameOnClick={[Function]}
          value="San Francisco"
        />
      </li>
      <li
        key="1"
      >
        <Item
          city={
            Object {
              "list_id": 2,
              "name": "Castro Valley",
            }
          }
          getNameOnClick={[Function]}
          value="Castro Valley"
        />
      </li>
    </ul>
  </div>
  <div
    className="list-forecast"
  >
    <div
      className="city-name"
    >
      <CurrentWeather
        city=""
        wData={Array []}
      />
    </div>
    <div
      className="forecast-items"
    />
  </div>
</div>
`;

exports[`ListPage component renders without cities 1`] = `
<div
  className="list"
>
  <AddCity
    context={
      Object {
        "lists": Array [],
      }
    }
  />
  <div
    className="list-cities"
  >
    <p>
      ⇦ Click a city to view Weather ⇨
    </p>
    <ul />
  </div>
  <div
    className="list-forecast"
  >
    <div
      className="city-name"
    >
      <CurrentWeather
        city=""
        wData={Array []}
      />
    </div>
    <div
      className="forecast-items"
    />
  </div>
</div>
`;
